import "ProtoBas.proto";

package com.games.common.protocol;

//普通的的请求
message CommonReq {
    
}

//普通的消息响应包
message CommonAns {
    optional eErrorCode err_code    = 1;    //错误码
    
}

//开始游戏请求
message StartGameReq {
    optional int32 id               = 1;
    optional string name            = 2;     
}

//开启游戏应答
message StartGameAns {
    optional eErrorCode err_code    = 1;    //错误码
    optional int32 id               = 2;
    optional string name            = 3; 
}







